--- a/.github/workflows/daily_product_machine.yml
+++ b/.github/workflows/daily_product_machine.yml
@@ -1,4 +1,4 @@
-name: Gumroad_Final_Success_2026
+name: Final_Success_Machine_Fixed
 on:
   workflow_dispatch:
 
@@ -6,29 +6,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Create Product via API
+      - name: Create Product
         run: |
-          # हमने डेटा भेजने का तरीका पूरी तरह बदल दिया है (JSON फॉर्मेट)
-          # यह 404 एरर को दरकिनार करने का सबसे आधुनिक तरीका है
+          # हमने यहाँ 'Bearer' शब्द का इस्तेमाल किया है जो आपके टोकन के लिए अनिवार्य है
           RESPONSE=$(curl -s -X POST "https://api.gumroad.com/v2/products" \
             -H "Authorization: Bearer ${{ secrets.GUMROAD_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "name": "Victory_Machine_Product",
-              "price_cents": 1000,
-              "description": "Successfully Created via Automated Machine",
-              "published": true
-            }')
+            -d "name=Automatic_Success_$(date +%H%M)" \
+            -d "price=1000" \
+            -d "description=Official Automated Product" \
+            -d "published=true")
 
           echo "Response: $RESPONSE"
 
-          # टेलीग्राम पर साफ संदेश
+          # टेलीग्राम पर सीधा संदेश
           if [[ $RESPONSE == *"\"success\":true"* ]]; then
-             MSG="✅ बधाई हो! आपकी मशीन चालू हो गई। प्रोडक्ट गमरोड पर लाइव है।"
+             MSG="✅ जीत गए! नया प्रोडक्ट Gumroad पर बन चुका है।"
           else
-             # अगर अभी भी कचरा आए, तो यह उसे छोटा करके दिखाएगा
-             CLEAN=$(echo $RESPONSE | head -c 100)
-             MSG="📊 रिपोर्ट: $CLEAN"
+             # अगर 404 आए तो यह साफ़ बताएगा
+             MSG="📊 रिपोर्ट: $(echo $RESPONSE | head -c 50)"
           fi
 
           curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage" \
